fix: Fixed bug where canvas would overflow container

--- a/src/Viewer.module.css
+++ b/src/Viewer.module.css
@@ -28,6 +28,7 @@
   border-radius: 5px 5px 0 0;
   flex-basis: var(--canvas-width-basis);
   flex-grow: 1;
+  overflow: hidden;
 }
 
 .canvasControlsContainer {
